html seiten ids hinzugefügt und auskommentierten code gelöscht

--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,14 @@
     <link rel="stylesheet" href="./css/stylesheet.css">
     <link rel="stylesheet" href="./css/dialoge.css">
     <link rel="stylesheet" href="./css/famsheet.css">
+    <link rel="stylesheet" href="./css/priosheet.css">
+
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,200&display=swap" rel="stylesheet">
     <link href="fontawesome-free-5.15.1-web/fontawesome-free-5.15.1-web/css/all-css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/b30115917b.js" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
 
 </head>
@@ -20,7 +23,7 @@
 <body>
     <div class="header-basic">
         <header>
-            <h1 class="topic">Urlaubswunsch</h1>
+            <h1 class="topicSmall">Home</h1>
             <img class="background" src="Images/holidaycollage.jpg">
         </header>
     </div>
@@ -35,31 +38,14 @@
             </div>
         </nav>
     </div>
-    <!-- <div class="addFamBtn">
-        <button id="famBtn">Anmelden</button>
-    </div>
-    <div class="article-content">
-        <div id="myModal" class="modal">
-            <div class="modal-content">
-                <div class="page">
-                    <span class="close">&times;</span>
-                    <label for="choose" class="chooseText"> Wählen Sie aus wer Sie sind:</label>
-                    <select name="choose" id="chooseDrop">
-                        <option id="chooseOption" value='createDropOption'>Auswahl</option>
-                    </select>
-                    <button id="submitBtn" type="submit">Auswählen</button>
-                </div>
-            </div>
-        </div>
-    </div> -->
-
 
     <div class="article-basic">
         <div class="site-container">
             <div class="article-container" id="acontainer">
                 <div id="body-overlay"></div>
                 <div class="dialog" id="addWindow-dialog">
-                    <a href="#" role="button" class="dialog-schliessen-button" onclick="dialogSchliessen('addWindow-dialog')">
+                    <a href="#" role="button" class="dialog-schliessen-button"
+                        onclick="dialogSchliessen('addWindow-dialog')">
                         <i class="fa-regular fa-circle-xmark"></i>
                     </a>
                     <h3>Urlaubswunsch Hinzufügen</h3>
@@ -82,7 +68,8 @@
                 </div>
                 <div id="body-overlay"></div>
                 <div class="dialog" id="editWindow-dialog">
-                    <a href="#" role="button" class="dialog-schliessen-button" onclick="dialogSchliessen('editWindow-dialog')">
+                    <a href="#" role="button" class="dialog-schliessen-button"
+                        onclick="dialogSchliessen('editWindow-dialog')">
                         <i class="fa-regular fa-circle-xmark"></i>
                     </a>
                     <h3>Urlaubswunsch Bearbeiten</h3>
@@ -95,7 +82,6 @@
                         </form>
                     </a>
                 </div>
-
 
 
             </div>
