--- a/public/holiday.html
+++ b/public/holiday.html
@@ -12,7 +12,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,200&display=swap" rel="stylesheet">
     <link href="fontawesome-free-5.15.1-web/fontawesome-free-5.15.1-web/css/all-css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/b30115917b.js" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
 
 </head>
@@ -20,7 +21,7 @@
 <body>
     <div class="header-basic">
         <header>
-            <h1 class="topic">Urlaub</h1>
+            <h1 class="topicSmall">Urlaub</h1>
             <img class="background" src="Images/holidaycollage.jpg">
         </header>
     </div>
@@ -76,7 +77,8 @@
 
                 <div id="body-overlay"></div>
                 <div class="dialog" id="addWindow-dialog">
-                    <a href="#" role="button" class="dialog-schliessen-button" onclick="dialogSchliessen('addWindow-dialog')">
+                    <a href="#" role="button" class="dialog-schliessen-button"
+                        onclick="dialogSchliessen('addWindow-dialog')">
                         <i class="fa-regular fa-circle-xmark"></i>
                     </a>
                     <h3>Urlaubsziel Hinzufügen</h3>
@@ -102,14 +104,16 @@
                 </div>
                 <div id="body-overlay"></div>
                 <div class="dialog" id="editWindow-dialog">
-                    <a href="#" role="button" class="dialog-schliessen-button" onclick="dialogSchliessen('editWindow-dialog')">
+                    <a href="#" role="button" class="dialog-schliessen-button"
+                        onclick="dialogSchliessen('editWindow-dialog')">
                         <i class="fa-regular fa-circle-xmark"></i>
                     </a>
                     <h3>Urlaubsziel Bearbeiten</h3>
 
                     <a class="editWindow-dialog-daten">
                         <form id="editHoliday" action="">
-                            <input type="text" placeholder="Titel: bsp.: Strandurlaub" id="titleTag" class="eingabefeld">
+                            <input type="text" placeholder="Titel: bsp.: Strandurlaub" id="titleTag"
+                                class="eingabefeld">
                             <select name="choose" id="timeTag" class="chooseSeason">
                                 <option id="chooseOption" value='createDropOption' class="ChooseSeasonText">Frühling
                                 </option>
