--- a/public/holidayWish.html
+++ b/public/holidayWish.html
@@ -12,7 +12,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,200&display=swap" rel="stylesheet">
     <link href="fontawesome-free-5.15.1-web/fontawesome-free-5.15.1-web/css/all-css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/b30115917b.js" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
 
 </head>
@@ -35,25 +36,6 @@
             </div>
         </nav>
     </div>
-    <!-- <div class="addFamBtn">
-        <button id="famBtn">Anmelden</button>
-    </div>
-    <div class="article-content">
-        <div id="myModal" class="modal">
-            <div class="modal-content">
-                <div class="page">
-                    <span class="close">&times;</span>
-                    <label for="choose" class="chooseText"> Wählen Sie aus wer Sie sind:</label>
-                    <select name="choose" id="chooseDrop">
-                        <option id="chooseOption" value='createDropOption'>Auswahl</option>
-                    </select>
-                    <button id="submitBtn" type="submit">Auswählen</button>
-                </div>
-            </div>
-        </div>
-    </div> -->
-
-
     <div class="article-basic">
         <div class="site-container">
             <div class="article-container" id="acontainer">
@@ -71,13 +53,10 @@
                     </div>
                     </a>
                 </article>
-
-
-
-
                 <div id="body-overlay"></div>
                 <div class="dialog" id="addWindow-dialog">
-                    <a href="#" role="button" class="dialog-schliessen-button" onclick="dialogSchliessen('addWindow-dialog')">
+                    <a href="#" role="button" class="dialog-schliessen-button"
+                        onclick="dialogSchliessen('addWindow-dialog')">
                         <i class="fa-regular fa-circle-xmark"></i>
                     </a>
                     <h3>Urlaubswunsch Hinzufügen</h3>
@@ -89,31 +68,26 @@
                             </select>
                             <input type="text" placeholder="Ort" id="locationTag" class="eingabefeld">
                             <input type="text" placeholder="beschreibung" id="descriptionTag" class="eingabefeld">
-
-
-
-                            <button type="submit" id="submitBtn">Hinzufügen!</button>
-
-
+                            <button type="submit">Hinzufügen!</button>
                         </form>
                     </a>
                 </div>
                 <div id="body-overlay"></div>
                 <div class="dialog" id="editWindow-dialog">
-                    <a href="#" role="button" class="dialog-schliessen-button" onclick="dialogSchliessen('editWindow-dialog')">
+                    <a href="#" role="button" class="dialog-schliessen-button"
+                        onclick="dialogSchliessen('editWindow-dialog')">
                         <i class="fa-regular fa-circle-xmark"></i>
                     </a>
                     <h3>Urlaubswunsch Bearbeiten</h3>
 
                     <a class="editWindow-dialog-daten">
-                        <form id="editHoliday-wish" action="">
+                        <form id="editHolidayWish" action="">
                             <input type="text" placeholder="Ort" id="locationTag" class="eingabefeld">
                             <input type="text" placeholder="beschreibung" id="descriptionTag" class="eingabefeld">
                             <button type="submit">Bearbeiten!</button>
                         </form>
                     </a>
                 </div>
-
 
 
             </div>
