holiday.html Anmelde Button entfernt, priority ids angepasst, css überarbeitet

--- a/public/priority.html
+++ b/public/priority.html
@@ -44,9 +44,9 @@
                 <div class="modal-content">
                     <div class="page">
                         <span class="close">&times;</span>
-                        <label for="choose" class="chooseText"> Wählen Sie aus wer Sie sind:</label>
-                        <select name="choose" id="chooseDrop">
-                            <option id="chooseOption" value='createDropOption'>Auswahl</option>
+                        <label for="choose" class="chooseTextFam"> Wählen Sie aus wer Sie sind:</label>
+                        <select name="choose" id="chooseDropFam">
+                            <option id="chooseOptionFam" value='createDropOption'>Auswahl</option>
                         </select>
                         <button id="submitBtn" type="submit">Auswählen</button>
                     </div>
