--- a/public/holiday.html
+++ b/public/holiday.html
@@ -7,7 +7,7 @@
     <title>MyFamilyHolidayPlaner</title>
     <link rel="stylesheet" href="./css/stylesheet.css">
     <link rel="stylesheet" href="./css/dialoge.css">
-    <link rel="stylesheet" href="./css/famsheet.css">
+    <link rel="stylesheet" href="./css/button.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,200&display=swap" rel="stylesheet">
     <link href="fontawesome-free-5.15.1-web/fontawesome-free-5.15.1-web/css/all-css" rel="stylesheet">
