--- a/public/impressum.html
+++ b/public/impressum.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,200&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link rel="stylesheet" href="./css/stylesheet.css">
-    <link rel="stylesheet" href="./css/famsheet.css">
+    <link rel="stylesheet" href="./css/button.css">
 
 </head>
 
