Copy right geändert

--- a/public/holidayWish.html
+++ b/public/holidayWish.html
@@ -96,7 +96,8 @@
     <div class="footer-basic">
         <footer>
             <p> <a href="impressum.html" class="kontaktLink" id="kontakt">Kontakt </a></p>
-            <p class="copyright">Wi Gruppe © 2018</p>
+            <p class="copyright">DYSM © 2022</p>
+
         </footer>
     </div>
 
