--- a/public/impressum.html
+++ b/public/impressum.html
@@ -19,7 +19,7 @@
     <div>
         <div class="header-basic">
             <header>
-                <h1 class="topic">Kontakt</h1>
+                <h1 class="topicSmall">Kontakt</h1>
                 <img class="background" src="./images/holidaycollage.jpg">
             </header>
         </div>
