--- a/public/holidayWish.html
+++ b/public/holidayWish.html
@@ -67,7 +67,7 @@
                                 <option id="chooseOption" value='createDropOption'>Auswahl</option>
                             </select>
                             <input type="text" placeholder="Ort" id="locationTag" class="eingabefeld">
-                            <input type="text" placeholder="beschreibung" id="descriptionTag" class="eingabefeld">
+                            <input type="text" placeholder="Beschreibung" id="descriptionTag" class="eingabefeld">
                             <button type="submit">Hinzufügen!</button>
                         </form>
                     </a>
